--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,12 +18,9 @@
         android:textSize="20dp"
         android:textColor="#fff"
         android:alpha="0.5"
-
-        android:paddingBottom="32dp"
-        android:layout_above="@+id/listenButton"
+        android:paddingTop="32dp"
+        android:layout_below="@+id/listenButton"
         android:layout_centerHorizontal="true" />
-
-
 
     <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -35,11 +32,12 @@
         <at.markushi.ui.CircleButton
             android:layout_width="250dip"
             android:layout_height="250dip"
-            app:cb_color="#fff"
+            app:cb_color="#e2e2e2"
             android:id="@+id/listenButton2"
             app:cb_pressedRingWidth="35dip"
             android:layout_gravity="center"
-            android:elevation="20dp"/>
+            android:elevation="20dp"
+            android:alpha="0.75"/>
     </FrameLayout>
 
     <Button
