--- a/app/src/main/res/layout/activity_language_choice.xml
+++ b/app/src/main/res/layout/activity_language_choice.xml
@@ -23,4 +23,19 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="what's up homie how are you doing>FE:F>R"
+        android:paddingRight="16dp"
+        android:paddingLeft="16dp"
+        android:id="@+id/dialogueText"
+        android:layout_marginTop="49dp"
+        android:textColor="#fff"
+        android:textStyle="italic"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
