--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="normal"
-        android:text="Press to Translate"
+        android:text="Press to Speak"
         android:textSize="20dp"
         android:textColor="#fff"
         android:alpha="0.5"
-        android:paddingTop="32dp"
+        android:paddingTop="64dp"
         android:layout_below="@+id/listenButton"
         android:layout_centerHorizontal="true" />
 
