Adding play again button

--- a/app/src/main/res/layout/activity_language_choice.xml
+++ b/app/src/main/res/layout/activity_language_choice.xml
@@ -23,4 +23,12 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Play Again"
+        android:id="@+id/playAgainBtn"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
