--- a/app/src/main/res/layout/activity_language_choice.xml
+++ b/app/src/main/res/layout/activity_language_choice.xml
@@ -30,13 +30,11 @@
         android:textColor="#fff"
         android:background="@android:color/transparent"
         android:id="@+id/playAgainBtn"
-        android:layout_above="@+id/backBtn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="88dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
         android:textStyle="bold"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        android:layout_above="@+id/backBtn"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -49,17 +47,18 @@
         android:text="eefwfeweffeewfew"
         android:textColor="#fff"
         android:textStyle="italic"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/langSpinner"
         android:layout_alignParentStart="true" />
 
 
     <Spinner
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/langSpinner"
-        android:layout_marginTop="89dp"
-        android:layout_below="@+id/dialogueText"
-        android:layout_centerHorizontal="true" />
+        android:background="#20000000"
+
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -74,6 +73,15 @@
         android:textStyle="italic"
         android:layout_below="@+id/dialogueText"
         android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+
+        android:maxHeight="350dp"
+        android:id="@+id/imageView"
+        android:layout_below="@+id/translatedDialogueText"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
